<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bluetooth.BluetoothActivity">

    <TextView
        android:id="@+id/tvDeviceStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/device_status"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        android:layout_below="@+id/bluetoothSwitch"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        />

<!--    <Switch-->
<!--        android:id="@+id/bluetoothSwitch"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:splitTrack="false"-->
<!--        android:text="BLUETOOTH OFF"-->
<!--        />-->

    <TextView
        android:id="@+id/tvPaired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_below="@+id/tvDeviceStatus"
        android:text="@string/paired_devices_label"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:id="@+id/pairedDevLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="20dp"
        android:layout_below="@+id/tvPaired"
        android:orientation="vertical"
        >
        <ListView
            android:id="@+id/lvPairedDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAvail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_below="@+id/pairedDevLayout"
        android:text="@string/available_devices_label"
        android:layout_marginStart="20dp" />

    <LinearLayout
        android:id="@+id/availDevLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="20dp"
        android:layout_below="@+id/tvAvail"
            android:orientation="vertical">

        <ListView
            android:id="@+id/lvAvailDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"
            />
    </LinearLayout>
</RelativeLayout>