<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mazeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="550dp">


                <view
                    android:id="@+id/mazeView"
                    class="com.example.mdp3_android.map.GridMap"
                    android:layout_width="400dp"
                    android:layout_height="520dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.796"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.466" />

                <TextView
                    android:id="@+id/robotStatusTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="32dp"
                    android:text="Robot Status:"
                    android:textColor="@color/dark_green"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/robotStatusTextView"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="12dp"
                    android:text="Not Available"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/robotStatusTitleTextView" />

                <TextView
                    android:id="@+id/directionTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:text="Direction:"
                    android:textColor="@color/dark_green"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/robotStatusTextView" />

                <TextView
                    android:id="@+id/directionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="24dp"
                    android:text="None"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/directionTitleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/robotStatusTextView" />

                <TextView
                    android:id="@+id/coordinateTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="44dp"
                    android:text="Coordinates (X,Y):"
                    android:textColor="@color/dark_green"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/directionTextView" />

                <TextView
                    android:id="@+id/leftBracketTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="8dp"
                    android:text="("
                    android:textColor="@color/dark_green"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coordinateTitleTextView" />

                <TextView
                    android:id="@+id/xCoordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="0"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/leftBracketTextView"
                    app:layout_constraintTop_toBottomOf="@+id/coordinateTitleTextView" />

                <TextView
                    android:id="@+id/commaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:textSize="15sp"
                    android:layout_marginTop="8dp"
                    android:text="@string/comma"
                    android:textColor="@color/dark_green"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/xCoordTextView"
                    app:layout_constraintTop_toBottomOf="@+id/coordinateTitleTextView" />

                <TextView
                    android:id="@+id/yCoordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"

                    android:layout_marginTop="8dp"
                    android:text="0"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/commaTextView"
                    app:layout_constraintTop_toBottomOf="@+id/coordinateTitleTextView" />

                <TextView
                    android:id="@+id/rightBracketTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"

                    android:layout_marginTop="8dp"
                    android:text=")"
                    android:textColor="@color/dark_green"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/yCoordTextView"
                    app:layout_constraintTop_toBottomOf="@+id/coordinateTitleTextView" />

                <Button
                    android:id="@+id/f1Button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="40dp"
                    android:clickable="true"
                    android:contentDescription="F1"
                    android:focusable="true"
                    android:text="F1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/xCoordTextView" />

                <Button
                    android:id="@+id/f2Button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="40dp"
                    android:clickable="true"
                    android:contentDescription="F2"
                    android:focusable="true"
                    android:text="F2"
                    app:layout_constraintEnd_toStartOf="@+id/mazeView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/f1Button"
                    app:layout_constraintTop_toBottomOf="@+id/xCoordTextView" />

                <Button
                    android:id="@+id/configureButton"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Reconfigure"

                    android:textSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/f2Button" />

                <Button
                    android:id="@+id/printMdfBtn"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="PRINT MDF"
                    android:textSize="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/configureButton" />

                <Switch
                    android:id="@+id/manualAutoToggleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginBottom="32dp"
                    android:text="MANUAL"
                    android:textColor="@color/dark_green"
                    android:textOff="@string/manual"
                    android:textOn="@string/auto"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/mazeView"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/printMdfBtn"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_green"
                    app:tabGravity="fill"
                    app:tabTextColor="@color/white"/>
            </androidx.viewpager.widget.ViewPager>

        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>